--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <form action="https://formspree.io/f/xrbelpda">
+        <form action="https://formspree.io/f/xrbelpda" method="post">
             <div class="fill">
                 <h1>Rental Application Form</h1>
                 <br>
